--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = custom
 include_dir  = Marlin
 extra_configs =
     Marlin/config.ini
@@ -285,3 +285,15 @@ platform         = atmelavr
 board            = megaatmega2560
 build_flags      = -c -H -std=gnu++11 -Wall -Os -D__MARLIN_FIRMWARE__
 build_src_filter = +<src/MarlinCore.cpp>
+
+[env:custom]
+extends                     = stm32_variant
+board                       = marlin_STM32F407VGT6_CCM
+board_build.variant         = MARLIN_F4x7Vx
+board_build.offset          = 0x0000
+board_upload.offset_address = 0x08000000
+board_build.rename          = Kurwa_drukar_noboot.bin
+build_flags                 = ${stm32_variant.build_flags} ${stm32f4_I2C1.build_flags}
+                              -DHAL_PCD_MODULE_ENABLED
+debug_tool                  = jlink
+upload_protocol             = jlink
